[package]
name = "fused"
description = "Ergonomic bindings to libfuse"
categories = ["filesystem"]
keywords = ["fuse", "libfuse", "filesystem"]

repository = "https://github.com/ureeves/fused"
authors = ["Eduardo Leegwater Simões <eduardols@protonmail.com>"]
version = "0.1.0"

edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
fused-sys = { path = "../sys" }
